--- a/src/main/resources/static/indexUser.html
+++ b/src/main/resources/static/indexUser.html
@@ -14,15 +14,15 @@
 	<h2>User Dashboard</h2>
 	<p>Welcome, user. Use the navigation to manage your data.</p>
 
-	<div style="margin-top:1rem;">
+	<div class="spaced">
 		<a href="/profileUser.html"><button>View profile</button></a>
 	</div>
 
-	<div style="margin-top:1rem;">
+	<div class="spaced">
 		<a href="/displayJobApplication.html"><button>Job Applications</button></a>
 	</div>
 
-	<div style="margin-top:1rem;">
+	<div class="spaced">
 		<button id="logoutBtn">Logout</button>
 	</div>
 
