--- a/src/main/resources/static/displayJobApplication.html
+++ b/src/main/resources/static/displayJobApplication.html
@@ -15,18 +15,18 @@
   <h2>My Job Applications</h2>
   <p id="note">Loading…</p>
 
-  <div id="userControls" style="margin-bottom:12px;"></div>
+  <div id="userControls" class="user-controls"></div>
 
-  <table id="appsTable" style="width:100%; border-collapse: collapse; display:none;">
+  <table id="appsTable" class="apps-table hidden">
     <thead>
       <tr>
-        <th style="display:none;">Post ID</th>
-        <th style="border:1px solid #ccc; padding:8px;">Name</th>
-        <th style="border:1px solid #ccc; padding:8px;">Description</th>
-        <th style="border:1px solid #ccc; padding:8px;">Duration</th>
-        <th style="border:1px solid #ccc; padding:8px;">Salary</th>
-        <th style="border:1px solid #ccc; padding:8px;">Status</th>
-        <th style="border:1px solid #ccc; padding:8px;">Applied At</th>
+        <th class="col-id">Post ID</th>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Duration</th>
+        <th>Salary</th>
+        <th>Status</th>
+        <th>Applied At</th>
       </tr>
     </thead>
     <tbody id="appsBody"></tbody>
@@ -93,13 +93,13 @@
         const postId = a.postId || a.post_id;
 
         tr.innerHTML = `
-          <td style="display:none;">${postId}</td>
-          <td style="border:1px solid #ccc; padding:8px;">${a.postName || a.name || ''}</td>
-          <td style="border:1px solid #ccc; padding:8px;">${a.postDescription || a.description || ''}</td>
-          <td style="border:1px solid #ccc; padding:8px;">${a.duration || ''}</td>
-          <td style="border:1px solid #ccc; padding:8px;">${a.salary || ''}</td>
-          <td style="border:1px solid #ccc; padding:8px;">${a.status || ''}</td>
-          <td style="border:1px solid #ccc; padding:8px;">${a.createdAt || a.created_at || ''}</td>
+          <td class="col-id">${postId}</td>
+          <td>${a.postName || a.name || ''}</td>
+          <td>${a.postDescription || a.description || ''}</td>
+          <td>${a.duration || ''}</td>
+          <td>${a.salary || ''}</td>
+          <td>${a.status || ''}</td>
+          <td>${a.createdAt || a.created_at || ''}</td>
         `;
 
         tr.style.cursor = 'pointer';
