--- a/src/main/resources/static/displayJobApplication.html
+++ b/src/main/resources/static/displayJobApplication.html
@@ -7,20 +7,23 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+
 <header>
-  <a class="site-title" href="/indexUser.html">CareerTracker</a>
+  <a id="homeLink" class="site-title" href="#">CareerTracker</a>
 </header>
 
 <main class="wide-card">
   <h2>My Job Applications</h2>
+
+  <div class="user-controls" id="userControls"></div>
+
   <p id="note">Loading…</p>
 
-  <div id="userControls" class="user-controls"></div>
-
-  <table id="appsTable" class="apps-table hidden">
+  <!-- SAME TABLE STYLE AS displayJobPost.html -->
+  <table id="appsTable" class="posts-table hidden">
     <thead>
       <tr>
-        <th class="col-id">Post ID</th>
+        <th>Post ID</th>
         <th>Name</th>
         <th>Description</th>
         <th>Duration</th>
@@ -43,27 +46,40 @@
   /* =======================
      Auth fetch (JWT)
      ======================= */
-  async function authFetch(url, opts = {}) {
+  function authFetch(url, opts = {}) {
     const token = localStorage.getItem('jwt');
-    if (!token) throw new Error('Missing JWT; please log in.');
+    if (!token) throw new Error('Missing JWT');
 
-    opts.headers = Object.assign({}, opts.headers || {}, {
+    opts.headers = {
+      ...(opts.headers || {}),
       'Authorization': 'Bearer ' + token.trim()
-    });
+    };
 
     return fetch(url, opts);
   }
 
   /* =======================
-     Load applications by USER ID
+     Dynamic home link
+     ======================= */
+  const type = localStorage.getItem('type');
+  const homeLink = document.getElementById('homeLink');
+  if (homeLink) {
+    if (type === 'USER') homeLink.href = '/indexUser.html';
+    else if (type === 'COMPANY') homeLink.href = '/indexCompany.html';
+    else homeLink.href = '/index.html';
+  }
+
+  /* =======================
+     Load applications
      ======================= */
   async function loadMyApplications() {
     const note = document.getElementById('note');
     const tbody = document.getElementById('appsBody');
+    const table = document.getElementById('appsTable');
 
     const userId = localStorage.getItem('loggedId');
     if (!userId) {
-      note.textContent = 'No logged user found. Please log in.';
+      note.textContent = 'No logged user found.';
       return;
     }
 
@@ -77,9 +93,7 @@
         return;
       }
 
-      if (!res.ok) {
-        throw new Error(`Failed to load applications (${res.status})`);
-      }
+      if (!res.ok) throw new Error('Failed to load');
 
       const applications = await res.json();
       if (!applications || applications.length === 0) {
@@ -88,21 +102,22 @@
       }
 
       tbody.innerHTML = '';
-      applications.forEach(a => {
-        const tr = document.createElement('tr');
-        const postId = a.postId || a.post_id;
 
+      applications.forEach(app => {
+        const post = app.jobPost || {};
+        const postId = post.id;
+
+        const tr = document.createElement('tr');
         tr.innerHTML = `
-          <td class="col-id">${postId}</td>
-          <td>${a.postName || a.name || ''}</td>
-          <td>${a.postDescription || a.description || ''}</td>
-          <td>${a.duration || ''}</td>
-          <td>${a.salary || ''}</td>
-          <td>${a.status || ''}</td>
-          <td>${a.createdAt || a.created_at || ''}</td>
+          <td>${postId ?? ''}</td>
+          <td>${post.name ?? ''}</td>
+          <td>${post.description ?? ''}</td>
+          <td>${post.duration ?? ''}</td>
+          <td>${post.salary ?? ''}</td>
+          <td>${app.status ?? ''}</td>
+          <td>${app.createdAt ?? ''}</td>
         `;
 
-        tr.style.cursor = 'pointer';
         tr.addEventListener('click', () => {
           if (postId) {
             window.location.href =
@@ -113,12 +128,12 @@
         tbody.appendChild(tr);
       });
 
-      note.style.display = 'none';
-      document.getElementById('appsTable').style.display = 'table';
+      note.classList.add('hidden');
+      table.classList.remove('hidden');
 
     } catch (err) {
       console.error(err);
-      note.textContent = 'Error loading your applications.';
+      note.textContent = 'Error loading applications.';
     }
   }
 
@@ -127,8 +142,6 @@
      ======================= */
   function setupUserControls() {
     const controls = document.getElementById('userControls');
-    const type = localStorage.getItem('type');
-
     if (type === 'USER') {
       const btn = document.createElement('button');
       btn.textContent = 'Find Job Posts';
@@ -140,5 +153,6 @@
   setupUserControls();
   loadMyApplications();
 </script>
+
 </body>
 </html>
