--- a/src/main/resources/static/jobPostDetails.html
+++ b/src/main/resources/static/jobPostDetails.html
@@ -6,13 +6,15 @@
   <title>Job Post Details - CareerTracker</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
 <header>
   <a id="homeLink" class="site-title" href="#">CareerTracker</a>
 </header>
 
 <main class="wide-card">
-  <h2 id="title">Job Post</h2>
+  <h2>Job Post</h2>
+
   <div id="details">
     <p class="hidden"><strong>ID:</strong> <span id="postId"></span></p>
     <p class="hidden"><strong>Company ID:</strong> <span id="companyId"></span></p>
@@ -25,7 +27,7 @@
   </div>
 
   <div class="action-row">
-    <button id="applyBtn" class="hidden" disabled>Submit Application</button>
+    <button id="applyBtn" class="hidden">Create Application</button>
     <button id="backBtn" type="button" class="ml-8">Back</button>
     <p id="message" class="mt-12"></p>
   </div>
@@ -33,6 +35,7 @@
   <section id="applicationsSection" class="applications-section hidden">
     <h3>Applications for this post</h3>
     <p id="appsNote">Loading…</p>
+
     <table id="appsTable" class="applications-table hidden">
       <thead>
         <tr>
@@ -52,194 +55,169 @@
 </footer>
 
 <script>
+  /* ================= HOME LINK ================= */
+
+  (function setHomeLink() {
+    const type = localStorage.getItem("type");
+    const homeLink = document.getElementById("homeLink");
+
+    if (type === "USER") {
+      homeLink.href = "/indexUser.html";
+    } else if (type === "COMPANY") {
+      homeLink.href = "/indexCompany.html";
+    } else {
+      homeLink.href = "/index.html";
+    }
+  })();
+
+  /* ================= HELPERS ================= */
+
   function getQueryParam(name) {
-    const params = new URLSearchParams(window.location.search);
-    return params.get(name);
+    return new URLSearchParams(window.location.search).get(name);
   }
 
-  // Auth fetch helper: automatically attach JWT
-  function authFetch(url, opts = {}) {
-    opts = opts || {};
-    opts.headers = opts.headers || {};
-    const token = localStorage.getItem('jwt');
-    if (!token) return Promise.reject(new Error('Missing JWT; please log in.'));
-    opts.headers = Object.assign({}, opts.headers, { 'Authorization': 'Bearer ' + token });
-    return fetch(url, opts);
+  function authFetch(url, options = {}) {
+    const token = localStorage.getItem("jwt");
+    if (!token) throw new Error("Not authenticated");
+
+    options.headers = {
+      ...(options.headers || {}),
+      Authorization: "Bearer " + token
+    };
+
+    return fetch(url, options);
   }
 
-  async function fetchSinglePostById(postId) {
-    const res = await authFetch('/JobPost/getAllPosts');
-    if (!res.ok) throw new Error('Failed to fetch posts');
-    const posts = await res.json();
-    return posts.find(p => String(p.postId || p.post_id || p.id) === String(postId));
-  }
+  /* ================= LOAD POST ================= */
 
-  async function loadDetails() {
-    const postId = getQueryParam('postId');
-    const msgEl = document.getElementById('message');
+  async function loadPostDetails() {
+    const postId = getQueryParam("postId");
+    const msg = document.getElementById("message");
+
     if (!postId) {
-      msgEl.textContent = 'No post selected.';
+      msg.textContent = "No post selected.";
       return;
     }
 
     try {
-      const post = await fetchSinglePostById(postId);
+      const res = await authFetch("/JobPost/getAllPosts");
+      if (!res.ok) throw new Error("Failed to fetch posts");
+
+      const posts = await res.json();
+      const post = posts.find(p =>
+        String(p.postId || p.post_id || p.id) === String(postId)
+      );
+
       if (!post) {
-        msgEl.textContent = 'Post not found.';
+        msg.textContent = "Post not found.";
         return;
       }
 
-      document.getElementById('postId').textContent = post.postId || post.post_id || post.id || '';
-      document.getElementById('companyId').textContent = post.companyId || post.company_id || '';
-      document.getElementById('name').textContent = post.name || '';
-      document.getElementById('description').textContent = post.description || '';
-      document.getElementById('duration').textContent = post.duration || '';
-      document.getElementById('available').textContent = post.available || '';
-      document.getElementById('salary').textContent = post.salary || '';
-      document.getElementById('createdAt').textContent = post.createdAt || post.created_at || '';
+      document.getElementById("postId").textContent = post.postId || post.id || "";
+      document.getElementById("companyId").textContent =
+        post.companyId || post.company_id || "";
+      document.getElementById("name").textContent = post.name || "";
+      document.getElementById("description").textContent = post.description || "";
+      document.getElementById("duration").textContent = post.duration || "";
+      document.getElementById("available").textContent = post.available || "";
+      document.getElementById("salary").textContent = post.salary || "";
+      document.getElementById("createdAt").textContent =
+        post.createdAt || post.created_at || "";
 
-      const companyView = getQueryParam('companyView') === 'true';
-      const applyBtn = document.getElementById('applyBtn');
-      const homeLink = document.getElementById('homeLink');
+      configureView(postId);
 
-      // Update home link dynamically
-      const type = localStorage.getItem('type');
-      if (type === "USER") homeLink.href = '/indexUser.html';
-      else if (type === "COMPANY") homeLink.href = '/indexCompany.html';
-      else homeLink.href = '/index.html';
-
-      if (companyView) {
-        applyBtn.classList.add('hidden');
-        applyBtn.disabled = true;
-        loadApplicationsForPost(postId);
-      } else {
-        // Show apply button for user if not applied
-        const loggedAccountId = localStorage.getItem('loggedId');
-        if (!loggedAccountId) {
-          applyBtn.classList.add('hidden');
-          applyBtn.disabled = true;
-        } else {
-          const userRes = await authFetch(`/User/getUserByAccountId/${encodeURIComponent(loggedAccountId)}`);
-          const user = userRes.ok ? await userRes.json() : null;
-          const userId = user?.userId || user?.user_id || user?.id || user?.accountId;
-          if (userId) {
-            const alreadyApplied = await checkExistingApplication(postId, userId);
-            if (!alreadyApplied) {
-              applyBtn.classList.remove('hidden');
-              applyBtn.disabled = false;
-            }
-          } else {
-            applyBtn.classList.add('hidden');
-            applyBtn.disabled = true;
-          }
-        }
-      }
     } catch (err) {
       console.error(err);
-      msgEl.textContent = 'Error loading post details.';
+      msg.textContent = "Error loading post details.";
     }
   }
 
-  async function submitApplication() {
-    const postId = document.getElementById('postId').textContent;
-    const msgEl = document.getElementById('message');
-    msgEl.textContent = '';
-    const applyBtn = document.getElementById('applyBtn');
-    applyBtn.disabled = true;
+  /* ================= VIEW LOGIC ================= */
 
-    const loggedAccountId = localStorage.getItem('loggedId');
-    if (!loggedAccountId) {
-      msgEl.textContent = 'You must be logged in to apply.';
-      applyBtn.disabled = false;
+  async function configureView(postId) {
+    const type = localStorage.getItem("type");
+    const loggedId = localStorage.getItem("loggedId");
+    const applyBtn = document.getElementById("applyBtn");
+
+    if (type === "COMPANY") {
+      loadApplicationsForPost(postId);
       return;
     }
 
-    try {
-      const userRes = await authFetch(`/User/getUserByAccountId/${encodeURIComponent(loggedAccountId)}`);
-      if (!userRes.ok) throw new Error('Failed to fetch user info');
-      const user = await userRes.json();
-      const userId = user?.userId || user?.user_id || user?.id || user?.accountId;
-      if (!userId) throw new Error('Could not determine your user id');
+    if (type === "USER" && loggedId) {
+      applyBtn.classList.remove("hidden");
 
-      const payload = { postId: Number(postId), userId: Number(userId), status: 'SUBMITTED' };
-
-      const res = await authFetch('/JobApplication/insertApplication', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(payload)
-      });
-
-      if (res.status === 409) {
-        msgEl.textContent = 'You have already submitted an application for this post.';
-        applyBtn.classList.add('hidden');
+      const alreadyApplied = await checkExistingApplication(postId, loggedId);
+      if (alreadyApplied) {
+        applyBtn.textContent = "Already applied";
         applyBtn.disabled = true;
-        return;
       }
-
-      if (!res.ok) throw new Error(`Failed to submit application (${res.status})`);
-
-      msgEl.textContent = 'Application submitted successfully.';
-      applyBtn.classList.add('hidden');
-      applyBtn.disabled = true;
-    } catch (err) {
-      console.error(err);
-      msgEl.textContent = `Error submitting application: ${err.message}`;
-      applyBtn.disabled = false;
     }
   }
+
+  /* ================= APPLICATIONS ================= */
 
   async function loadApplicationsForPost(postId) {
-    const appsNote = document.getElementById('appsNote');
-    const appsBody = document.getElementById('appsBody');
+    const appsNote = document.getElementById("appsNote");
+    const appsBody = document.getElementById("appsBody");
+
     try {
-      const res = await authFetch(`/JobApplication/getApplicationsByPostId/${encodeURIComponent(postId)}`);
+      const res = await authFetch(`/JobApplication/getApplicationsByPostId/${postId}`);
       if (!res.ok) {
-        appsNote.textContent = 'No applications found.';
+        appsNote.textContent = "No applications found.";
         return;
       }
+
       const apps = await res.json();
       if (!apps || apps.length === 0) {
-        appsNote.textContent = 'No applications found for this post.';
+        appsNote.textContent = "No applications found.";
         return;
       }
-      appsBody.innerHTML = '';
+
+      appsBody.innerHTML = "";
       apps.forEach(a => {
-        const tr = document.createElement('tr');
+        const tr = document.createElement("tr");
         tr.innerHTML = `
-          <td>${a.applicationId || a.application_id || ''}</td>
-          <td>${a.userId || a.user_id || ''}</td>
-          <td>${a.status || ''}</td>
-          <td>${a.createdAt || a.created_at || ''}</td>
+          <td>${a.applicationId || a.id || ""}</td>
+          <td>${a.userId || a.user_id || ""}</td>
+          <td>${a.status || ""}</td>
+          <td>${a.createdAt || a.created_at || ""}</td>
         `;
         appsBody.appendChild(tr);
       });
-      appsNote.classList.add('hidden');
-      document.getElementById('appsTable').classList.remove('hidden');
-      document.getElementById('applicationsSection').classList.remove('hidden');
+
+      appsNote.classList.add("hidden");
+      document.getElementById("appsTable").classList.remove("hidden");
+      document.getElementById("applicationsSection").classList.remove("hidden");
+
     } catch (err) {
       console.error(err);
-      appsNote.textContent = 'Error loading applications.';
+      appsNote.textContent = "Error loading applications.";
     }
   }
 
   async function checkExistingApplication(postId, userId) {
-    if (!postId || !userId) return false;
     try {
-      const res = await authFetch(`/JobApplication/getApplicationByIds?post_id=${encodeURIComponent(postId)}&user_id=${encodeURIComponent(userId)}`);
-      if (!res.ok) return false;
-      const body = await res.json();
-      return Array.isArray(body) ? body.length > 0 : Object.keys(body).length > 0;
-    } catch (e) {
-      console.warn('checkExistingApplication failed', e);
+      const res = await authFetch(
+        `/JobApplication/getApplicationByIds?post_id=${postId}&user_id=${userId}`
+      );
+      return res.ok;
+    } catch {
       return false;
     }
   }
 
-  document.getElementById('applyBtn').addEventListener('click', submitApplication);
-  document.getElementById('backBtn').addEventListener('click', () => history.back());
+  /* ================= BUTTONS ================= */
 
-  // Load post details on page load
-  loadDetails();
+  document.getElementById("applyBtn").addEventListener("click", () => {
+    const postId = document.getElementById("postId").textContent;
+    window.location.href =
+      `/jobApplication.html?postId=${encodeURIComponent(postId)}`;
+  });
+
+  document.getElementById("backBtn").addEventListener("click", () => history.back());
+
+  loadPostDetails();
 </script>
 </body>
 </html>
